--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -3,13 +3,14 @@
   --font-slab: var(--font-default);
   --modal-duration: 0.8s;
 }
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
-/* Landing Page */
 
+/* Landing Page */
 body {
   margin: 0;
   display: flex;
@@ -17,7 +18,6 @@ body {
   background-image: url("background.png");
   font-family: var(--font-default);
   font-size: 18px;
-  max-width: 1300px;
   margin: 0 auto;
 }
 
@@ -28,18 +28,25 @@ p {
 
 img {
   padding-right: 1rem;
+  height: 40px;
 }
 
 .topnav {
-  overflow: hidden;
-  margin: 3.5%;
+  margin: calc(2vw + 15px) auto;
+  height: 50px;
+  max-width: 1280px;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 20px;
 }
+
 .header-logo {
-    float: left;
+  display: flex;
+  align-items: center;
 }
-.main-navbar {
-    float: right;
-}
+
 .topnav a {
   float: left;
   display: block;
@@ -48,7 +55,7 @@ img {
   padding: 12px 12px;
   margin: 5px;
   text-decoration: none;
-  font-size: 20px;
+  font-size: 16px;
   font-family: Roboto, sans-serif;
 }
 
@@ -61,46 +68,55 @@ img {
 .topnav a.active {
   background-color: #ff0000;
   color: #ffffff;
-  border-radius: 15px;
+  border-radius: 8px;
 }
 
 .topnav .icon {
   display: none;
 }
 
+.main-navbar {
+  display: flex;
+}
+
 @media screen and (max-width: 768px) {
-  .topnav a {display: none;}
+  .topnav a {
+    display: none;
+  }
   .topnav a.icon {
     float: right;
     display: block;
   }
 }
-
 @media screen and (max-width: 768px) {
-  .topnav.responsive {position: relative;}
+  .links-navbar {
+    display: flex;
+    flex-direction: column;
+  }
+  .topnav.responsive {
+    position: relative;
+  }
   .topnav.responsive .icon {
     position: absolute;
     right: 0;
     top: 0;
   }
   .topnav.responsive a {
-    float: none;
     display: block;
     text-align: left;
+    z-index: 100;
   }
 }
-
-
-
- @media screen and (max-width: 540px) {
-  .topnav a {display: none;}
+@media screen and (max-width: 540px) {
+  .topnav a {
+    display: none;
+  }
   .topnav a.icon {
     float: right;
     display: block;
     margin-top: -15px;
   }
-} 
-
+}
 main {
   font-size: 130%;
   font-weight: bolder;
@@ -111,8 +127,7 @@ main {
   margin: 1px 20px 15px;
   border-radius: 2rem;
   text-align: justify;
-
-
+  margin: auto;
 }
 
 .modal-btn {
@@ -138,7 +153,6 @@ main {
 }
 
 /* Modal form */
-
 .button {
   background: #fe142f;
   margin-top: 0.5em;
@@ -195,11 +209,13 @@ label {
   display: inline-block;
   margin-bottom: 11px;
 }
+
 input {
   padding: 8px;
   border: 0.8px solid #ccc;
   outline: none;
 }
+
 .text-control {
   margin: 0;
   padding: 8px;
@@ -208,6 +224,7 @@ input {
   font-size: 20px;
   height: 48px;
 }
+
 .formData[data-error]::after {
   content: attr(data-error);
   font-size: 0.4em;
@@ -220,12 +237,15 @@ input {
   opacity: 0;
   transition: 0.3s;
 }
-.formData[data-error-visible="true"]::after {
+
+.formData[data-error-visible=true]::after {
   opacity: 1;
 }
-.formData[data-error-visible="true"] .text-control {
+
+.formData[data-error-visible=true] .text-control {
   border: 2px solid #e54858;
 }
+
 /* 
 input[data-error]::after {
     content: attr(data-error);
@@ -239,6 +259,7 @@ input[data-error]::after {
   font-size: 12px;
   font-weight: normal;
 }
+
 .checkbox-label .checkbox-icon,
 .checkbox2-label .checkbox-icon {
   display: block;
@@ -253,6 +274,7 @@ input[data-error]::after {
   top: -1px;
   transition: 0.3s;
 }
+
 .checkbox-label .checkbox-icon::after,
 .checkbox2-label .checkbox-icon::after {
   content: "";
@@ -269,21 +291,26 @@ input[data-error]::after {
   transition: 0.3s;
   opacity: 0;
 }
+
 .checkbox-input {
   display: none;
 }
+
 .checkbox-input:checked + .checkbox-label .checkbox-icon::after,
 .checkbox-input:checked + .checkbox2-label .checkbox-icon::after {
   opacity: 1;
 }
+
 .checkbox-input:checked + .checkbox2-label .checkbox-icon {
   background: #279e7a;
 }
+
 .checkbox2-label .checkbox-icon {
   border-radius: 4px;
   border: 0;
   background: #c4c4c4;
 }
+
 .checkbox2-label .checkbox-icon::after {
   width: 7px;
   height: 4px;
@@ -296,6 +323,7 @@ input[data-error]::after {
   left: 21%;
   top: 19%;
 }
+
 .close {
   position: absolute;
   right: 15px;
@@ -306,6 +334,7 @@ input[data-error]::after {
   cursor: pointer;
   transform: scale(0.7);
 }
+
 .close:before,
 .close:after {
   position: absolute;
@@ -315,12 +344,15 @@ input[data-error]::after {
   width: 3px;
   background-color: #fff;
 }
+
 .close:before {
   transform: rotate(45deg);
 }
+
 .close:after {
   transform: rotate(-45deg);
 }
+
 .btn-submit,
 .btn-signup {
   background: #fe142f;
@@ -333,6 +365,7 @@ input[data-error]::after {
   cursor: pointer;
   border: 0;
 }
+
 /* custom select styles */
 .custom-select {
   position: relative;
@@ -344,6 +377,7 @@ input[data-error]::after {
 .custom-select select {
   display: none;
 }
+
 .select-selected {
   background-color: #fff;
 }
@@ -399,20 +433,24 @@ input[data-error]::after {
 .same-as-selected {
   background-color: rgba(0, 0, 0, 0.1);
 }
+
 /* custom select end */
 .text-label {
   font-weight: normal;
   font-size: 16px;
 }
+
 .hero-section {
-  min-height: 93vh;
+  max-height: 657px;
   border-radius: 10px;
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   overflow: hidden;
-  box-shadow: 0 2px 7px 2px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 10px 15px 2px rgba(0, 0, 0, 0.3);
   margin-bottom: 10px;
+  max-width: 1240px;
 }
+
 .hero-content {
   padding: 51px 67px;
   grid-column: span 4;
@@ -422,6 +460,7 @@ input[data-error]::after {
   text-align: left;
   min-width: 424px;
 }
+
 .hero-content::after {
   content: "";
   width: 100%;
@@ -431,38 +470,52 @@ input[data-error]::after {
   right: -80px;
   top: 0;
 }
+
 .hero-content > * {
   position: relative;
   z-index: 1;
 }
+
 .hero-headline {
-  font-size: 6rem;
+  font-size: 96px;
   font-weight: normal;
   white-space: nowrap;
 }
+
 .hero-text {
   width: 146%;
   font-weight: normal;
   margin-top: 57px;
   padding: 0;
+  font-size: 24px;
+  font-weight: 400;
 }
+
 .btn-signup {
   outline: none;
   text-transform: capitalize;
-  font-size: 1.3rem;
-  padding: 15px 23px;
+  font-size: 25px;
+  padding: 10px 20px;
   margin: 0;
   margin-top: 59px;
+  line-height: 32.55px;
+  width: 199px;
+  height: 55px;
 }
+
 .hero-img {
   grid-column: span 8;
 }
+
 .hero-img img {
   width: 100%;
   height: 100%;
   display: block;
   padding: 0;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
+
 .copyrights {
   color: #fe142f;
   padding: 0;
@@ -470,13 +523,20 @@ input[data-error]::after {
   margin: 60px 0 30px;
   font-weight: bolder;
 }
+
 .hero-section > .btn-signup {
   display: none;
 }
+
 footer {
   padding-left: 2vw;
   padding-right: 2vw;
-  margin: 0 20px;
+  margin: auto;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  max-width: 1420px;
+  width: 100%;
 }
 
 /* ERROR */
@@ -488,15 +548,18 @@ footer {
   margin-top: 1rem;
   display: none;
 }
+
 @media screen and (max-width: 800px) {
   .hero-section {
     display: block;
     box-shadow: unset;
+    max-height: 100%;
   }
   .hero-content {
     background: #fff;
     color: #000;
-    padding: 20px;
+    padding: 10px;
+    min-width: unset;
   }
   .hero-content::after {
     content: unset;
@@ -507,10 +570,12 @@ footer {
   .hero-headline {
     font-size: 4.5rem;
     white-space: normal;
+    text-align: center;
   }
   .hero-text {
     width: unset;
     font-size: 1.5rem;
+    text-align: center;
   }
   .hero-img img {
     border-radius: 10px;
@@ -519,14 +584,26 @@ footer {
   .hero-section > .btn-signup {
     display: block;
     margin: 32px auto 10px;
-    padding: 12px 35px;
   }
   .copyrights {
     margin-top: 50px;
     text-align: center;
   }
 }
-
+@media screen and (max-width: 1025px) {
+  .hero-headline {
+    font-size: 9vw;
+  }
+  .hero-text {
+    font-size: 1.2rem;
+  }
+  .hero-img img {
+    margin-top: 20px;
+  }
+  .hero-section > .btn-signup {
+    margin-top: 20px;
+  }
+}
 @keyframes modalopen {
   from {
     opacity: 0;
@@ -535,5 +612,4 @@ footer {
   to {
     opacity: 1;
   }
-}
-
+}/*# sourceMappingURL=modal.css.map */
