--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -191,7 +191,7 @@ main {
   margin: 5% auto;
   width: 100%;
   max-width: 500px;
-  max-height: 800px;
+  max-height: 950px;
   animation-name: modalopen;
   animation-duration: var(--modal-duration);
   background: #232323;
@@ -578,24 +578,13 @@ footer {
 #errorFirstName,
 #errorLastName,
 #errorEmail,
-#errorPassword,
-#errorConfirmPassword,
-#errorPhone,
-#errorAddress,
-#errorCity,
-#errorState,
-#errorZip,
-#errorCountry,
-#errorCardName,
-#errorCardNumber,
-#errorCardExpiration,
-#errorCardCVV,
-#errorCardZip,
-#errorCardCountry {
+#errorBirthdate,
+#errorQuantity,
+#errorLocation1 {
   color: red;
   font-size: 0.8rem;
   font-weight: bold;
-  text-align: center;
+  text-align: start;
   margin-top: 1rem;
   display: none;
 }
