--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -205,7 +205,8 @@ main {
   position: relative;
   padding: 15px 8%;
   margin: 15px auto;
-  min-height: 743px;
+  min-height: 250px;
+  height: 70vh;
 }
 
 label {
@@ -575,7 +576,8 @@ footer {
 #errorEmail,
 #errorBirthdate,
 #errorQuantity,
-#errorLocation1 {
+#errorLocation1,
+#errorCheckbox1 {
   color: red;
   font-size: 0.8rem;
   font-weight: bold;
