--- a/starterOnly/modal.scss
+++ b/starterOnly/modal.scss
@@ -38,7 +38,7 @@ img {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 20px;
+    padding: 0 6vw;
 }
 .header-logo {
     display: flex;
@@ -60,9 +60,9 @@ img {
 .topnav a:hover {
     background-color: #ff0000;
     color: #ffffff;
-    border-radius: 15px;
+    border-radius: 8px;
 }
-.topnav a:hover.icon {
+.topnav a:over.icon {
     color: #ffffff;
 }
 
@@ -70,6 +70,7 @@ img {
     background-color: #ff0000;
     color: #ffffff;
     border-radius: 8px;
+    text-decoration: underline;
 }
 
 .topnav .icon {
@@ -78,9 +79,13 @@ img {
 
 .main-navbar {
     display: flex;
-    // flex-direction: column;
+    align-items: center;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 800px) {
+    img {
+        height: 25px;
+        padding: 0 10px;
+    }
     .topnav a {
         display: none;
     }
@@ -88,10 +93,15 @@ img {
         display: block;
         color: red;
         font-size: 2rem;
+        &:hover {
+            background-color: #ff0000;
+            color: #ffffff;
+            border-radius: 15px;
+        }
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 800px) {
     .links-navbar {
         z-index: 1000;
         display: flex;
@@ -102,14 +112,6 @@ img {
         background-color: #fff;
         box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.2);
         border-radius: 10px;
-    }
-    .topnav.responsive {
-        // position: relative;
-    }
-    .topnav.responsive .icon {
-        // position: absolute;
-        // right: 0;
-        // top: 0;
     }
     .topnav.responsive a {
         display: block;
@@ -125,12 +127,10 @@ img {
     .topnav a.icon {
         float: right;
         display: block;
-        margin-top: -15px;
     }
 }
 
 main {
-    font-size: 130%;
     font-weight: bolder;
     color: black;
     padding-top: 0.5vw;
@@ -200,7 +200,6 @@ main {
     margin: 5% auto;
     width: 100%;
     max-width: 500px;
-    // max-height: 950px;
     animation-name: modalopen;
     animation-duration: var(--modal-duration);
     background: #232323;
@@ -209,17 +208,15 @@ main {
     position: relative;
     color: #fff;
     padding-top: 10px;
+    top: 70px;
 }
 
 .modal-body {
-    position: relative;
     padding: 15px 8%;
     margin: 15px auto;
     min-height: 250px;
-    height: 70vh;
-}
-.content, .modal-body {
-    // height: 100%;
+    // height: 70vh;
+    max-height: 90vh;
 }
 label {
     font-family: var(--font-default);
@@ -474,7 +471,7 @@ input[data-error]::after {
     z-index: 1;
 }
 .hero-headline {
-    font-size: 96px;
+    font-size: 6rem;
 
     font-weight: normal;
     white-space: nowrap;
@@ -482,7 +479,7 @@ input[data-error]::after {
 .hero-text {
     width: 146%;
     font-weight: normal;
-    margin-top: 57px;
+    margin-top: 20px;
     padding: 0;
     font-size: 24px;
     font-weight: 400;
@@ -506,13 +503,12 @@ input[data-error]::after {
     height: 100%;
     display: block;
     padding: 0;
-    // background-size: cover;
     object-fit: cover;
 }
 .copyrights {
     color: #fe142f;
     padding: 0;
-    font-size: 1rem;
+    font-size: 10px;
     margin: 60px 0 30px;
     font-weight: bolder;
 }
@@ -535,11 +531,10 @@ footer {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    height: 100%;
+    height: 60vh;
     text-align: center;
     font-weight: 400;
     font-size: 36px;
-
 }
 .closeBtn {
     display: none;
@@ -555,8 +550,7 @@ footer {
 #errorBirthdate,
 #errorQuantity,
 #errorLocation1,
-#errorCheckbox1
-{
+#errorCheckbox1 {
     color: red;
     font-size: 0.8rem;
     font-weight: bold;
@@ -564,7 +558,20 @@ footer {
     margin-top: 1rem;
     display: none;
 }
-
+@media screen and (max-width: 1025px) {
+    .hero-headline {
+        font-size: 9vw;
+    }
+    .hero-text {
+        font-size: 1.2rem;
+    }
+    .hero-img img {
+        margin-top: 20px;
+    }
+    .hero-section > .btn-signup {
+        margin-top: 20px;
+    }
+}
 @media screen and (max-width: 800px) {
     main {
         padding: 0 6vw;
@@ -583,24 +590,26 @@ footer {
     .hero-content::after {
         content: unset;
     }
-    .hero-content .btn-signup {
-        display: none;
-    }
     .hero-headline {
-        font-size: 4.5rem;
+        font-size: 40px;
         white-space: normal;
     }
     .hero-text {
         width: unset;
-        font-size: 1.5rem;
+        font-size: 13px;
     }
     .hero-img img {
         border-radius: 10px;
         margin-top: 40px;
     }
     .hero-section > .btn-signup {
-        display: block;
+        display: flex;
         margin: 32px auto 10px;
+        font-size: 14px;
+        height: 31px;
+        width: 141px;
+        align-items: center;
+        justify-content: center;
     }
     footer {
         justify-content: center;
@@ -610,21 +619,11 @@ footer {
         text-align: center;
         margin: 20px 0 30px;
     }
-}
-@media screen and (max-width: 1025px) {
-    .hero-headline {
-        font-size: 9vw;
-    }
-    .hero-text {
-        font-size: 1.2rem;
-    }
-    .hero-img img {
-        margin-top: 20px;
-    }
-    .hero-section > .btn-signup {
-        margin-top: 20px;
+    .btn-signup {
+        display: none;
     }
 }
+
 @keyframes modalopen {
     from {
         opacity: 0;
