--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -580,19 +580,12 @@ footer {
 }
 
 /* ERROR */
-#errorFirstName,
-#errorLastName,
-#errorEmail,
-#errorBirthdate,
-#errorQuantity,
-#errorLocation1,
-#errorCheckbox1 {
+.error {
   color: red;
   font-size: 0.8rem;
   font-weight: bold;
   text-align: start;
   margin-top: 1rem;
-  display: none;
 }
 
 @media screen and (max-width: 1025px) {
